--- a/styles.css
+++ b/styles.css
@@ -200,6 +200,7 @@ header nav ul li a {
   .button2 {
     width: 200px; /* Set a fixed width for both buttons */
     height: 50px; /* Set a fixed height for both buttons */
+    align-items: center;
   }
   
   /* Adjust button styles as needed */
@@ -256,14 +257,14 @@ header nav ul li a {
 /* Social Icons */
 .social-icons {
     display: flex;
-    gap: 1rem;
+    gap: 3rem;
     justify-content: center;
     margin-top: 1rem;
   }
   
   .social-icons a {
     color: #6A5ACD;
-    font-size: 24px;
+    font-size: 30px;
     transition: color 0.3s ease;
     text-decoration: none;
   }
@@ -278,13 +279,19 @@ header nav ul li a {
     flex-direction: column;
     gap: 1rem;
     margin-top: 2rem;
-    border: 2px solid #6A5ACD;
     padding: 1rem;
     border-radius: 10px;
-    background-color: #1a1a1a; /* Add background color to contact info */
+    background-color: #6A5ACD; /* Add background color to contact info */
   }
-  
-  .contact-item {
+  .contact-header {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    color: white;
+    font-size: 19px;
+    font-weight: bold;
+  }
+  .contact-header-item {
     display: flex;
     gap: 1rem;
     align-items: center;
@@ -333,7 +340,7 @@ header nav ul li a {
     display: flex; /* Use Flexbox to create a horizontal row */
     overflow-x: auto; /* Enable horizontal scrolling on smaller screens */
     gap: 20px;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 .skill-box {
@@ -345,7 +352,7 @@ header nav ul li a {
     align-items: center;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    background-color: #585252;
+    background-color: #6A5ACD;
     border-radius: 10px;
 }
 
@@ -401,6 +408,7 @@ header nav ul li a {
   padding: 20px;
   background-color: #585252;
   border-radius: 10px;
+  margin-bottom: 10px;
 }
 
 .portfoilo-box img {
@@ -454,7 +462,7 @@ header nav ul li a {
 
 .my-technologies-section .grid-item {
     text-align: center;
-    background-color: #585252;
+    background-color: #6A5ACD;
     padding: 20px;
     border-radius: 10px;
     transition: background-color 0.3s ease;
